# hunter_bipedal_control

./: .gitignore  README.md
gr1_hardware/fsa_sdk/: CMakeLists.txt  package.xml
gr1_hardware/fsa_sdk/include/: Fsa.h  FsaMutiMotor.h  FsaSocket.h
gr1_hardware/fsa_sdk/src/: Fsa.cpp  FsaMutiMotor.cpp  FsaSocket.cpp
gr1_hardware/fse_sdk/: CMakeLists.txt  package.xml
gr1_hardware/fse_sdk/config/: config.json
gr1_hardware/fse_sdk/include/: fse.h  main.h
gr1_hardware/fse_sdk/source/: CMakeLists.txt  demo_comm_config_get.cpp  demo_comm_config_set.cpp  demo_ctrl_config_get.cpp  demo_ctrl_config_save.cpp  demo_ctrl_config_set.cpp  demo_get_measured.cpp  demo_home_offset_get.cpp  demo_home_offset_set.cpp  demo_home_position_set.cpp  demo_lookup.cpp  demo_lookup_AbsEncoder.cpp  demo_ota.cpp  demo_ota_cloud.cpp  demo_ota_test.cpp  demo_reboot.cpp  demo_reboot_fse.cpp  fse.cpp  fse_list.cpp
gr1_hardware/gr1_hardware_interface/: CMakeLists.txt  README.md  package.xml
legged_controllers/cfg/: Tutorials.cfg
legged_controllers/launch/: one_start.launch  one_start_mujoco.launch  one_start_pybullet.launch  one_start_real.launch
legged_controllers/rviz/: legged_robot.rviz
legged_controllers/scripts/: cmd_vel_publisher.py  keyboard_teleop.py  plot_log.py
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_estimation/src/: LinearKalmanFilter.cpp  StateEstimateBase.cpp
legged_examples/GR1T1/: CMakeLists.txt  package.xml  urdf.rviz
legged_examples/GR1T2/: CMakeLists.txt  package.xml
legged_examples/h1/: CMakeLists.txt  package.xml
legged_examples/high_torque/: CMakeLists.txt  package.xml
legged_interface/launch/: legged_robot_sqp.launch
legged_interface/src/: LeggedInterface.cpp  SwitchedModelReferenceManager.cpp
legged_wbc/src/: HierarchicalWbc.cpp  WbcBase.cpp  WeightedWbc.cpp
mujoco/launch/: mujoco_sim.launch
mujoco/src/: main.cc
pybullet/: CMakeLists.txt  package.xml
pybullet/scripts/: config.py  pybullet_env.py  pybullet_lcm.py  pybullet_sim.py
(+75 files in other folders)
